Test 3 on internal links

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
             Link test
         </h1>
         <p>
-            <a href="Lincol0n.github.io/index"> testing link structure... Currently on about</a>
+            <a href="index.html"> testing link structure... Currently on about</a>
         </p>
     </body>
 </html>
