--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             Link test
         </h1>
         <p>
-            <a href="Lincol0n.github.io/about">testing link structure... Currently on index/home</a>
+            <a href="about.html">testing link structure... Currently on index/home</a>
         </p>
     </body>
 </html>
