--- a/about.html
+++ b/about.html
@@ -12,5 +12,12 @@
         <p>
             <a href="index.html"> testing link structure... Currently on about</a>
         </p>
+        <h2>
+            Supercalifragilisticexpialidocious
+        </h2>
+        <p>
+            Supercalifragilisticexpialidocious is such a cool word. 
+            <a href="https://encrypted-vtbn0.gstatic.com/video?q=tbn:ANd9GcS5U-S2LX-0L1DpE2Nj8_slkZtQgjstksfS6Q"> Click here to learn more</a> 
+        </p>
     </body>
 </html>
