--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
         <p>
             Supercalifragilisticexpialidocious is such a cool word. 
             <a href="https://encrypted-vtbn0.gstatic.com/video?q=tbn:ANd9GcS5U-S2LX-0L1DpE2Nj8_slkZtQgjstksfS6Q"> Click here to learn more</a> 
+            <a href="<a href="https://encrypted-vtbn0.gstatic.com/video?q=tbn:ANd9GcS5U-S2LX-0L1DpE2Nj8_slkZtQgjstksfS6Q"> NOOOOOOOO</a> 
         </p>
     </body>
 </html>
