Youtube video link

--- a/about.html
+++ b/about.html
@@ -13,12 +13,13 @@
             <a href="index.html"> testing link structure... Currently on about</a>
         </p>
         <h2>
-            Supercalifragilisticexpialidocious
+            Favourite words:
         </h2>
-        <p>
-            Supercalifragilisticexpialidocious is such a cool word. 
-            <a href="https://encrypted-vtbn0.gstatic.com/video?q=tbn:ANd9GcS5U-S2LX-0L1DpE2Nj8_slkZtQgjstksfS6Q"> Click here to learn more</a> 
-            <a href="<a href="https://encrypted-vtbn0.gstatic.com/video?q=tbn:ANd9GcS5U-S2LX-0L1DpE2Nj8_slkZtQgjstksfS6Q"> NOOOOOOOO</a> 
-        </p>
+        <ul>
+            Supercalifragilisticexpialidocious is such a cool word. &nbsp;
+            <a href="https://encrypted-vtbn0.gstatic.com/video?q=tbn:ANd9GcS5U-S2LX-0L1DpE2Nj8_slkZtQgjstksfS6Q"> Click here to learn more</a> &nbsp;
+            If you want to watch the full youtube video, &nbsp;
+            <a href="https://www.youtube.com/watch?v=uZNRzc3hWvE"> Click here instead</a> 
+        </ul>
     </body>
 </html>
