--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
         <title>
             Personal Website
         </title>
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     </head>
     <body>
         <h1>
