favicon attempt 2 with javascript

--- a/about.html
+++ b/about.html
@@ -4,7 +4,12 @@
         <title>
             Personal Website
         </title>
-        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+        <link id="Ufavicon" rel="icon" type="image/x-icon" href="/images/favicon/1.png">
+        <script>
+            for (let i = 1; i < 19; i++) {
+                document.getElementById("Ufavicon").href = `/images/favicon/${i}.png`;
+            }
+        </script>
     </head>
     <body>
         <h1>
